[gd_scene load_steps=7 format=3 uid="uid://l5jts8o0sprl"]

[ext_resource type="Script" uid="uid://c6slmgmnxfx4s" path="res://scripts/GameManager.gd" id="1_71j4m"]
[ext_resource type="PackedScene" uid="uid://bhkidw16jmgu8" path="res://scenes/player_1.tscn" id="1_nnsk1"]
[ext_resource type="PackedScene" uid="uid://cktvsan1pxk0e" path="res://scenes/player_2.tscn" id="2_rwgxs"]
[ext_resource type="Script" uid="uid://ccjtq0iws17x4" path="res://scripts/UI.gd" id="4_qfnet"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nnsk1"]
size = Vector2(329.75, 6.09637)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rwgxs"]
size = Vector2(4.62524, 180)

[node name="Word" type="Node2D"]

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource("1_71j4m")

[node name="CountdownTimer" type="Timer" parent="GameManager"]

[node name="CountdownLabel" type="Label" parent="GameManager"]
offset_left = 135.0
offset_top = 68.0
offset_right = 175.0
offset_bottom = 91.0

[node name="player1" parent="GameManager" groups=["Players"] instance=ExtResource("1_nnsk1")]
position = Vector2(26, 165)

[node name="player2" parent="GameManager" groups=["Players"] instance=ExtResource("2_rwgxs")]
position = Vector2(294, 15)
rotation = -1.5708

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("4_qfnet")

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
offset_left = 135.0
offset_top = 130.0
offset_right = 175.0
offset_bottom = 170.0

[node name="RoundsLabelP1" type="Label" parent="UI/HBoxContainer"]
layout_mode = 2

[node name="RoundsLabelP2" type="Label" parent="UI/HBoxContainer"]
layout_mode = 2

[node name="Player1Lives" type="Label" parent="UI"]
offset_left = 23.0
offset_top = 8.0
offset_right = 74.0
offset_bottom = 31.0
language = "es_AR"

[node name="Player2Lives" type="Label" parent="UI"]
offset_left = 225.0
offset_top = 11.0
offset_right = 280.0
offset_bottom = 34.0

[node name="LimitMap" type="Node2D" parent="."]

[node name="wall" type="StaticBody2D" parent="LimitMap"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LimitMap/wall"]
position = Vector2(160.25, -3.04819)
shape = SubResource("RectangleShape2D_nnsk1")

[node name="wall2" type="StaticBody2D" parent="LimitMap"]
position = Vector2(0, 668)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LimitMap/wall2"]
position = Vector2(160.125, -485.773)
scale = Vector2(1, 0.719195)
shape = SubResource("RectangleShape2D_nnsk1")

[node name="wall3" type="StaticBody2D" parent="LimitMap"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LimitMap/wall3"]
position = Vector2(-2.31262, 90)
shape = SubResource("RectangleShape2D_rwgxs")

[node name="wall4" type="StaticBody2D" parent="LimitMap"]
position = Vector2(1172, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LimitMap/wall4"]
position = Vector2(-849.5, 86)
shape = SubResource("RectangleShape2D_rwgxs")
